--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -9,6 +9,8 @@ font-family: Raleway, Arial, sans-serif;
 }
 header{
     background-color:#d7c9aa ;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 .home-title {
 font-family: 'Arial', 'Bradley Hand', sans-serif;
@@ -22,15 +24,21 @@ main{
     height: 725px;
     background-color: #FF9F1C ;
 }
+nav {
+    display: flex;
+    justify-content: space-around;
+}
 nav a{
     text-align: center;
    text-decoration: none;  
+   padding: 35px;
 }
 nav a:hover{
     background-color: #D0E37F;
 }
 #hero-msg h1, #hero-msg h4 {
 text-align: center;
+color: white
 } 
 .button-box {
     text-align: center;
@@ -45,12 +53,12 @@ text-align: center;
     background-color: #D0E37F;
     border-radius: 5%;
 }
-.msg{
+.msg {
     background-color: #ffffff;
   line-height: 1.5em;   
   padding: 35px;
 }
-footer{
+footer {
     background-color: #e8ddb5;
     padding: 25px 50px;
     margin-top: 200px;
@@ -72,8 +80,7 @@ footer a:hover {
 
 }
 h4 {
-background-color: #000000;
-
+/*background-color: #000000;*/
 }
 .icon {
     width: 80px;
@@ -82,8 +89,33 @@ background-color: #000000;
 .logo {
     width: 120px;
 }
+.home-grid{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
 #hero-img {
 width: 100%;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer p {
 font-size: 1.2em;;
@@ -100,9 +132,99 @@ footer .social img {
 .rivers-card, .camping-card, .rapids-card  {
     margin: 200px 0;
 }
-.card-img {
-    border: 10px solid #d9c2a3;
-}
+
 main section img {
      box-sizing: border-box;
 }
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
+
+/*coding card*/
+.card-img, .moutains {
+    border: 10px solid #d9c2a3;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+#background{
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+.moutains{
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.msg{
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover{
+    opacity: .6;
+    transform: scale (1.1);
+}
+
+/* Media Query */
+
+
+@media screen and (max-width: 800px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+   
