--- a/ice/valentines/styles/styles.css
+++ b/ice/valentines/styles/styles.css
@@ -1,1 +1,99 @@
-/* Add your CSS here to style your valentines day page */
+/* Add your CSS here to style your valentines day page */       
+
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;400;600&display=swap');
+
+body {
+    margin: 0;
+    font-family: 'poppins', sans-serif;
+    background: linear-gradient(to bottom right, #ffccd5, #ff4d6d);
+    color: #5a0033;
+}
+
+#wrapper {
+    max-width: 1100px;
+    margin: auto;
+    background: white;
+    border-radius: 20px;
+    box-shadow: 0 10px 30px rgb(0,0,0,0,2);
+    overflow: hidden;
+}
+
+header {
+    background: #c9184a;
+    padding: 20px 0;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    padding: 0;
+    margin: 0;
+    
+}
+nav li {
+    color: white;
+    font-weight: 600;
+    cursor: pointer;
+    transition: transform 0.3s, color 0.3s;
+}
+nav li:hover {
+    color: #ffccd5;
+    transform: scale(1.2);
+}
+main {
+    padding: 40px;
+    text-align: center;
+}
+h1 {
+    font-family: 'Great Vibes',cursive;
+    font-size: 60px;
+    color: #c9184a;
+    margin-bottom: 20px;
+}
+main img {
+    width: 300px;
+    border-radius: 20px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+    margin-bottom: 40px;
+}
+
+section {
+    background: #fff0f5;
+    padding: 20px;
+    margin: 20px 0;
+    border-radius: 15px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    transition: transform 0.3s, background 0.3s;
+}
+
+section:hover {
+    transform: translateY(-5px);
+    background: #ffe5ec;
+}
+h2 {
+    color: #d0004b;
+    margin-bottom: 10px;
+}
+p {
+    line-height: 1.6;
+}
+
+footer {
+    background: #c9184a;
+    color: white;
+    text-align: center;
+    padding: 15px;
+    font-weight: 600;
+}
+body::before {
+    content: "❤ ❤ ❤ ❤ ❤ ❤ ❤ ❤ ❤ ❤";
+    position: fixed;
+    top: 0;
+    width: 100%;
+    text-align: center;
+    color: rgba(255,255,255,0.3);
+    font-size: 25px;
+    pointer-events: none;
+}
